tests/invalid/list_count_wrong_arg_count/main.py
def run_case() -> None:
    xs: list[int] = [2, 1]
    c: int = xs.count()
    print(c)


if __name__ == "__main__":
    run_case()
